--- a/build.gradle
+++ b/build.gradle
@@ -21,15 +21,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.codehaus.groovy:groovy:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.7'
+	implementation 'org.codehaus.groovy:groovy:3.0.10'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test')
 	testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
 
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
 }
